[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmops"
version = "0.0.1"
authors = [
  { name="Michael Fatemi", email="gsk6me@virginia.edu" },
]
description = "A package for simple LLM ops"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"openai"
]

[project.urls]
"Homepage" = "https://github.com/myfatemi04/llmops"
"Bug Tracker" = "https://github.com/myfatemi04/llmops/issues"
